cambio archivo index.html

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 <body>
   <h1>Hola mundo desde index.html</h1>
   <p>Esta es una modificación.</p>
+  <p>Esta es otra modificación.</p>
 </body>
 </html>
